--- a/app/index.html
+++ b/app/index.html
@@ -109,8 +109,29 @@
 								</li>
 							</ul>
 						</div>
-						<div class="section2 accordion">
-							accordion
+						<div class="section2">
+							<div class="accordion">
+								<ul class="accordion__desc-wrap">
+									<li class="accordion__desc-item parent_active">
+										<div class="accordion__desc-minhead active">Заголовок 1</div>
+										<div class="accordion__description">
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
+										</div>
+									</li>
+									<li class="accordion__desc-item">
+										<div class="accordion__desc-minhead">Заголовок 2</div>
+										<div class="accordion__description">
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
+										</div>
+									</li>
+									<li class="accordion__desc-item">
+										<div class="accordion__desc-minhead">Заголовок 3</div>
+										<div class="accordion__description">
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
+										</div>
+									</li>
+								</ul>
+							</div>
 						</div>
 				</div>
 						</div>
