--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=990">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="bundle.css">
 
@@ -108,30 +108,61 @@
 									</a>
 								</li>
 							</ul>
+						</div>						
+						<div class="accordion">
+							<ul class="accordion__desc-wrap">
+								<li class="accordion__desc-item parent_active">
+									<div class="accordion__desc-minhead active">Заголовок 1</div>
+									<div class="accordion__description">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
+									</div>
+								</li>
+								<li class="accordion__desc-item">
+									<div class="accordion__desc-minhead">Заголовок 2</div>
+									<div class="accordion__description">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
+									</div>
+								</li>
+								<li class="accordion__desc-item">
+									<div class="accordion__desc-minhead">Заголовок 3</div>
+									<div class="accordion__description">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
+									</div>
+								</li>
+							</ul>
 						</div>
-						<div class="section2">
-							<div class="accordion">
-								<ul class="accordion__desc-wrap">
-									<li class="accordion__desc-item parent_active">
-										<div class="accordion__desc-minhead active">Заголовок 1</div>
-										<div class="accordion__description">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
-										</div>
-									</li>
-									<li class="accordion__desc-item">
-										<div class="accordion__desc-minhead">Заголовок 2</div>
-										<div class="accordion__description">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
-										</div>
-									</li>
-									<li class="accordion__desc-item">
-										<div class="accordion__desc-minhead">Заголовок 3</div>
-										<div class="accordion__description">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
-										</div>
-									</li>
-								</ul>
-							</div>
+						<div class="tabs">
+							<ul class="tabs__controls">
+								<li class="tabs__controls-item active"><a href="#" class="tabs__control-link">
+										Таб 1
+									</a></li>
+								<li class="tabs__controls-item"><a href="#" class="tabs__control-link">
+										Таб 2
+									</a></li>
+								<li class="tabs__controls-item"><a href="#" class="tabs__control-link">
+										Таб 3
+									</a></li>							
+							</ul>
+							<ul class="tabs__list">
+								<li class="tabs__item active">
+									<h2>Таб 1</h2>
+									<p>
+										<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
+									</p>
+								</li>
+								<li class="tabs__item">
+									<h2>Таб 2</h2>
+									<p>
+										<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
+									</p>
+								</li>
+								<li class="tabs__item">
+									<h2>Таб 3</h2>
+									<p>
+										<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
+									</p>
+								</li>								
+							</ul>
 						</div>
 				</div>
 						</div>
