--- a/app/index.html
+++ b/app/index.html
@@ -109,28 +109,6 @@
 								</li>
 							</ul>
 						</div>						
-						<div class="accordion">
-							<ul class="accordion__desc-wrap">
-								<li class="accordion__desc-item parent_active">
-									<div class="accordion__desc-minhead active">Заголовок 1</div>
-									<div class="accordion__description">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
-									</div>
-								</li>
-								<li class="accordion__desc-item">
-									<div class="accordion__desc-minhead">Заголовок 2</div>
-									<div class="accordion__description">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
-									</div>
-								</li>
-								<li class="accordion__desc-item">
-									<div class="accordion__desc-minhead">Заголовок 3</div>
-									<div class="accordion__description">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum veritatis animi porro molestiae, vitae nisi, suscipit facere amet assumenda cum odio maiores fugit eveniet voluptate. Rem, labore, perspiciatis! Officiis, reprehenderit.</p>
-									</div>
-								</li>
-							</ul>
-						</div>
 						<div class="tabs">
 							<ul class="tabs__controls">
 								<li class="tabs__controls-item active"><a href="#" class="tabs__control-link">
@@ -162,6 +140,70 @@
 										<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
 									</p>
 								</li>								
+							</ul>
+						</div>
+						<div class="accordeon">							
+							<ul class="accordeon__list">
+								<li class="accordeon__item">
+									<a href="#" class="accordeon__trigger">Link 1</a>
+									<ul class="accordeon__inner">
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 1
+											</a>
+									</li>
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 2
+											</a>
+									</li>
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 3
+											</a>
+									</li>										
+									</ul>
+								</li>
+								<li class="accordeon__item">
+									<a href="#" class="accordeon__trigger">Link 2</a>
+									<ul class="accordeon__inner">
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 1
+											</a>
+									</li>
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 2
+											</a>
+									</li>
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 3
+											</a>
+									</li>										
+									</ul>
+								</li>
+								<li class="accordeon__item">
+									<a href="#" class="accordeon__trigger">Link 3</a>
+									<ul class="accordeon__inner">
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 1
+											</a>
+									</li>
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 2
+											</a>
+									</li>
+										<li class="accordeon__inner-item">
+											<a href="#" class="accordeon__inner-link">
+												Inner Link 3
+											</a>
+									</li>										
+									</ul>
+								</li>
 							</ul>
 						</div>
 				</div>
