--- a/app/index.html
+++ b/app/index.html
@@ -118,22 +118,26 @@
 							</ul>
 							<ul class="tabs__list">
 								<li class="tabs__item active">
-									<h2>Таб 1</h2>
-									<p>
-										<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
-									</p>
+										<h2>Таб 1</h2>
+										<p>
+											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
+										</p>									
 								</li>
 								<li class="tabs__item">
-									<h2>Таб 2</h2>
-									<p>
-										<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
-									</p>
+										<h2>Таб 2</h2>
+										<p>
+											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!
+											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis voluptas corporis quidem assumenda quasi facere quam voluptatibus magnam odio voluptates aut est sit dolore impedit expedita ad vitae inventore, eaque.</span><span>Atque eveniet dolorum, porro unde! Modi, assumenda eveniet sed ex cum voluptates necessitatibus vitae, ipsa aspernatur aut totam adipisci, magnam et laborum similique amet omnis mollitia ratione fugit at odit!</span>	
+											</span>
+										</p>									
 								</li>
 								<li class="tabs__item">
-									<h2>Таб 3</h2>
-									<p>
-										<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!</span>
-									</p>
+										<h2>Таб 3</h2>
+										<p>
+											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis eaque corporis, magni saepe debitis odio explicabo iste incidunt aut rem? Labore excepturi quam harum dignissimos, voluptatum iste quasi quod dicta!
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, distinctio, esse expedita doloribus error accusantium deleniti, totam atque at tenetur dolorum inventore repellendus omnis hic culpa minus temporibus corporis facilis.
+											</span>
+										</p>									
 								</li>
 							</ul>
 						</section>
