--- a/app/index.html
+++ b/app/index.html
@@ -212,8 +212,24 @@
 										</li>
 									</ul>
 								</li>
-							</ul>						   						
-						</section>							
+							</ul>					   						
+						</section>						
+						<section class="slider">
+							<div class="slider__list-wrap">
+								<ul class="slider__list">
+									<li class="slider__item"><img src="img/slider/1.jpg" alt="" class="slider__pic"></li>
+									<li class="slider__item"><img src="img/slider/2.jpg" alt="" class="slider__pic"></li>
+									<li class="slider__item"><img src="img/slider/3.jpg" alt="" class="slider__pic"></li>
+									<li class="slider__item"><img src="img/slider/4.jpg" alt="" class="slider__pic"></li>
+									<li class="slider__item"><img src="img/slider/5.jpg" alt="" class="slider__pic"></li>
+								</ul>
+							</div>
+								<div class="slider__controls">
+									<a href="#" class="slider__controls-button slider__controls-button-next">next</a>
+									<a href="#" class="slider__controls-button slider__controls-button-prev">prev</a>
+								</div>
+							
+						</section>
 					</div> <!-- sections wrapper -->
 				</div> <!-- sections -->
 			</div> <!-- content -->
